I fricked up on the marquee kinda and it breaks on some aspect ratios. I fixed it now.

--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@ a:visited {
 	}
 }
 
-.marquee {
+.marquee-inner {
 	--_scroll-speed: 12s;
+	width: 40ch;
 	animation: marquee-slide var(--_scroll-speed) linear infinite;
 }
 
